--- a/src/css/ceos.css
+++ b/src/css/ceos.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 * {
     margin: 0;
     border: 0;
@@ -121,7 +124,7 @@ a{
 
 body {
     padding: 2rem;
-    font-family: Inter, roboto, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: Inter, roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .d-none {
@@ -332,7 +335,7 @@ body {
         background-color: #F3F3F6;
 
         span{
-            width: 2.5rem;
+            width: 3rem;
             font-size: 1.5rem;
             font-weight: 500;
             color: #2525D0;
@@ -389,6 +392,23 @@ body {
     }
 }
 
+.machines{
+    display: flex;
+    gap: 2rem;
+
+    .start-game{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        svg{
+            width: 44px ;
+            height: 44px;
+        }
+    }
+}
+
 .slider-container{
     width: 100vw;
     height: 100vh;
@@ -419,25 +439,33 @@ body {
                 transform: translateX(-50%);
                 text-align: center;
                 font-size: 5rem;
-                color: #fff;
-                font-weight: 500;
+                color: #000;
+                font-weight: 700;
+            }
+
+            .logo-ceos{
+                width: 800px;
+                margin-top: 4rem;
+                animation: blink 0.5s ease infinite;
             }
         }
 
-        .frame1 { background-color: #b639d2;}
-        .frame2 { background-color: #ec881d; }
-        .frame3 { background-color: #b5ca2b; }
-        .frame4 { background-color: #E72582; }
-        .frame5 { background-color: #FFBB00; }
+        .frame1 { background-color: #d57be9;}
+        .frame2 { background-color: #e6b457; }
+        .frame3 { background-color: #2bca80; }
+        .frame4 { background-color: #e24b94; }
+        .frame5 { background-color: #f8fc39; }
     }
+
   }
 
 .container {
 
-    margin-top: 100px;
+    margin-top: 2rem;
 
    .machine-container{
     max-width: 1000px;
+    height: 450px;
     margin: auto;
     position: relative;
     border: solid 0.5rem #6F6F6F;
@@ -448,6 +476,7 @@ body {
         display: flex;
         margin: auto;
         width: 100%;
+        height: 100%;
     }
 
     .card-meter{
@@ -476,7 +505,7 @@ body {
     .options-container{
         margin: auto;
         width: 600px;
-        height: 45%;
+        height: 55%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -713,6 +742,18 @@ body {
     }
 }
 
+.made-for{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    max-width: 600px;
+    margin: auto;
+    margin-top: 2rem;
+    padding: 1rem;
+    border-radius: 999px;
+    background-color: #F3F3F6;
+}
 
 @media screen and (max-width: 768px) {
 
@@ -786,6 +827,11 @@ body {
             border-radius: 2rem;
             background-color: red;
         }
+    }
+
+    .made-for{
+        flex-direction: column;
+        border-radius: 2rem;
     }
 
 }
