--- a/src/css/quebra-cabeca.css
+++ b/src/css/quebra-cabeca.css
@@ -95,9 +95,9 @@ a{
 }
 
 body {
-    font-family: Arial, sans-serif;
     background: url("/public/assets/images/bg-game.svg") no-repeat center top;
     background-color: #004F9F;
+    font-family: Inter, roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 main{
