--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+}
+
 :root {
   --font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -49,6 +53,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #004F9F;
+    font-family: Inter, roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 main{
@@ -58,6 +63,22 @@ main{
     flex-direction: column;
     gap: 1.5rem;
     align-items: center;
+}
+
+.exit-button{
+    max-width: 140px;
+    display: flex;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    background-color: var(--colorBgPrimary);
+    border-radius: 999px;
+    font-weight: 500;
+    transition: 0.2s;
+    color: var(--colorAccentPrimary);
+
+    &:hover{
+        transform: scale(1.1);
+    }
 }
 
 #mapa {
@@ -95,6 +116,12 @@ main{
     position: absolute;
     right: 0px;
     top: 0px;
+}
+
+#confetti{
+    position: absolute;
+    top: 300px;
+    left: 200px;
 }
 
 .boneco {
